[dy] Update workspaces docs for ingress (#4355)
* [dy] Update documentation

* [dy] Add support for load balancer

* [dy] Update exception handling

--- a/docs/production/developing-in-the-cloud/workspaces/kubernetes.mdx
+++ b/docs/production/developing-in-the-cloud/workspaces/kubernetes.mdx
@@ -3,6 +3,8 @@ title: "Kubernetes"
 sidebarTitle: "Kubernetes"
 ---
 
+## Setup
+
 We recommend using Helm to set up your Kubernetes cluster. You can find our Mage Helm
 documentation [here](/production/deploying-to-cloud/using-helm). You will need to create
 a persistent volume for your cluster.
@@ -30,6 +32,53 @@ env:
   - name: REQUIRE_USER_AUTHENTICATION
     value: "1"
 ```
+
+### Ingress
+
+If you want to access your workspaces through the same url, i.e. `https://your-domain.com/<workspace-name>`,
+you will need to set up an ingress.
+
+You will need to first install an ingress controller in your kubernetes cluster if you do not already have one.
+The most common ingress controller is the Ingress-Nginx Controller . You
+can find instructions on how to install the controller [here](https://kubernetes.github.io/ingress-nginx/deploy/).
+
+Once the ingress controller is installed, you can create an ingress through the Mage Helm charts. You can create
+an ingress by setting the following fields in the `values.yaml` file:
+
+```yaml
+ingress:
+  enabled: true
+  className: nginx # your ingress class name
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: your-domain.com
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+```
+
+There is additional configuration for the ingress that you can set, but that will depend on your
+own requirements. When a workspace is created, you can specify the name of the ingress created above
+to automatically add the workspace to the ingress rules. The workspace will be added to the ingress rules
+like this:
+
+```yaml
+spec:
+  rules:
+    - host: your-domain.com
+      http:
+        paths:
+          - path: /<workspace-name>
+            path_type: Prefix
+            backend:
+              service:
+                name: <service-name>
+                port: 6789
+          - path: ...
+```
+
 
 ## Permissions
 
