--- a/docs/contributing/development-environment.mdx
+++ b/docs/contributing/development-environment.mdx
@@ -42,7 +42,7 @@ Next, you'll need to configure your development environment. This should be as s
    ```
 </Step>
 <Step title="Open Mage">
-    When developing frontend, use port 3000. If you only need to develop backend, you can use port 6789. Find these ports at [https://localhost:3000](https://localhost:3000) & [https://localhost:6789](https://localhost:6789).
+    When developing frontend, use port 3000. If you only need to develop backend, you can use port 6789. Find these ports at [http://localhost:3000](http://localhost:3000) & [http://localhost:6789](http://localhost:6789).
 </Step>
 </Steps>
 
