--- a/docs/platform/projects/management.mdx
+++ b/docs/platform/projects/management.mdx
@@ -18,6 +18,12 @@ description: "Manage infinite number of Mage and non-Mage projects from a single
 
 ## Overview
 
+<video
+    controls
+    className="w-full aspect-video"
+    src="https://github.com/mage-ai/assets/blob/main/platform/multi-project-platform.mp4">
+</video>
+
 In a previous universe, a single Mage application supported only 1 Mage project and only read
 files from sub-directories of the top-level Mage project.
 
@@ -83,6 +89,17 @@ any project to be located anywhere.
 
 For a skeleton template of a pre-configured Multi-project platform setup, 
 clone this [repository](https://github.com/mage-ai/platform_template). 
+
+---
+
+## Project preferences
+
+Each Mage project can have its own set of feature settings, custom designs, and more.
+
+However, the top-level project can override these settings for each project.
+
+To set project-wide settings, go to the project preferences page and on the left side there will
+be a navigation option to configure the settings for the entire platform.
 
 ---
 
