--- a/docs/platform/designs/setup.mdx
+++ b/docs/platform/designs/setup.mdx
@@ -2,6 +2,7 @@
 title: "Customize Mage’s design and layout"
 sidebarTitle: "Custom designs"
 description: "Change the visuals and customize parts of the user interface to best suite your needs."
+icon: "paintbrush-pencil"
 "og:image": "https://i.gifer.com/FJQR.gif"
 ---
 
