--- a/docs/platform/overview.mdx
+++ b/docs/platform/overview.mdx
@@ -2,6 +2,7 @@
 title: "Craft your powerful platform to launch unstoppable data products"
 sidebarTitle: "Platformization"
 description: "Transform Mage into your very own data platform. Harness the capabilities of enterprise level features to customize and power-up your developers’ experience."
+icon: "space-awesome"
 "og:image": "https://4.bp.blogspot.com/-L2LgdXdE7KE/UoI5RxS9cPI/AAAAAAAAFgg/CKpohJMoRm8/s1600/enders+game+gif.gif"
 ---
 
