--- a/docs/platform/projects/management.mdx
+++ b/docs/platform/projects/management.mdx
@@ -2,6 +2,7 @@
 title: "Multi-project platform"
 sidebarTitle: ""
 description: "Manage infinite number of Mage and non-Mage projects from a single running Mage application."
+icon: "layer-group"
 "og:image": "https://media2.giphy.com/media/zXmbOaTpbY6mA/giphy.gif"
 ---
 
