--- a/docs/dbt/developer-experience.mdx
+++ b/docs/dbt/developer-experience.mdx
@@ -6,48 +6,43 @@ icon: "superpowers"
 "og:image": "https://i.gifer.com/RJ4x.gif"
 ---
 
-<Frame>
-    <p align="center">
-    <img
-        alt="dbt DX 2.0"
-        src="https://i.gifer.com/RJ4x.gif"
-    />
-    </p>
-</Frame>
-
-<br />
-
 ## dbt code blocks
-
-<Frame>
-    <p align="center">
-    <img
-        alt="dbt DX 2.0"
-        src="https://i.gifer.com/RJ4x.gif"
-    />
-    </p>
-</Frame>
 
 A new and enhanced user interface to build and run models.
 
+<Frame>
+    <p align="center">
+    <img
+        alt="dbt DX 2.0"
+        src="https://github.com/mage-ai/assets/blob/main/dbt/dbt-dx-code-blocks.gif?raw=true"
+    />
+    </p>
+</Frame>
+
+---
 
 ## AI powers
+
+Add your [OpenAI API key](/guides/ai/overview) to Mage or integrate your own [custom AI model](/guides/ai/ai-client)
+to use AI powers when writing queries and/or debugging errors in your models.
 
 <Frame>
     <p align="center">
     <img
         alt="dbt DX 2.0"
-        src="https://i.gifer.com/RJ4x.gif"
+        src="https://github.com/mage-ai/assets/blob/main/dbt/dbt-dx-ai.gif?raw=true"
     />
     </p>
 </Frame>
-
-Add your [OpenAI API key] to Mage or integrate your own [custom AI model](/guides/ai/ai-client)
-to use AI powers when writing queries and/or debugging errors in your models.
 
 ---
 
 ## Browse and discover models across multiple projects
+
+Dedicated file browser to discover existing models across multiple projects. 
+View metadata about each model and when you find the right one, easily add it to your pipeline.
+
+From a single pipeline, run any model from any dbt project.
 
 <Frame>
     <p align="center">
@@ -57,8 +52,3 @@ to use AI powers when writing queries and/or debugging errors in your models.
     />
     </p>
 </Frame>
-
-Dedicated file browser to discover existing models across multiple projects. 
-View metadata about each model and when you find the right one, easily add it to your pipeline.
-
-From a single pipeline, run any model from any dbt project.
