--- a/docs/platform/projects/management.mdx
+++ b/docs/platform/projects/management.mdx
@@ -22,7 +22,7 @@ icon: "layer-group"
 <video
     controls
     className="w-full aspect-video"
-    src="https://github.com/mage-ai/assets/blob/main/platform/multi-project-platform.mp4">
+    src="https://github.com/mage-ai/assets/blob/main/platform/multi-project-platform.mp4?raw=true">
 </video>
 
 In a previous universe, a single Mage application supported only 1 Mage project and only read
