--- a/docs/developer-ux/file-browser.mdx
+++ b/docs/developer-ux/file-browser.mdx
@@ -29,6 +29,11 @@ icon: "files"
 
 ### File
 
+- Rename file
+- Move file
+- Download file
+- Delete file
+
 <Frame>
     <p align="center">
     <img
@@ -39,6 +44,17 @@ icon: "files"
 </Frame>
 
 ### Folder
+
+- Open all files in the immediate directory
+- New folder
+- Rename  folder
+- Move folder
+- Delete folder
+- Upload files
+- Expand all subfolders
+- Collapse all subfolders
+- New Mage project
+- New dbt project
 
 <Frame>
     <p align="center">
