[td] More docs for devx

--- a/docs/data-integrations/batch-pipelines.mdx
+++ b/docs/data-integrations/batch-pipelines.mdx
@@ -66,7 +66,7 @@ dynamic capabilities of a batch pipeline.
 - Dynamically build the source and destination catalog schema at runtime.
 - Source blocks can output its fetched data to any downstream block.
 - Any block can output its data to a destination block and have it exported to that destination.
-- `[Coming soon]` *Support incremental sync*.
+- Support incremental sync
 - `[Coming soon]` *Support log based sync*.
 - `[Coming soon]` *Replicate source and destination blocks*.
 - `[Coming soon]` *Support source and destination blocks as dynamic blocks*.
