[td] More docs for devx

--- a/docs/developer-ux/code-editor.mdx
+++ b/docs/developer-ux/code-editor.mdx
@@ -182,7 +182,7 @@ data integrations (Singer Taps and Targets) provided by the data engineering com
 
 ---
 
-## Generate code (using AI)
+## Use AI to write code for you
 
 A line of code you don’t write is a line of code you never have to debug.
 Use AI to generate the code for you.
@@ -191,7 +191,7 @@ Use AI to generate the code for you.
     <p align="center">
     <img
         alt="Generate code using AI."
-        src="https://github.com/mage-ai/assets/blob/main/overview/ai-demo.gif?raw=True"
+        src="https://github.com/mage-ai/assets/blob/main/dev-ux/code-editor/ai-generate-code.gif?raw=True"
     />
     </p>
 </Frame>
@@ -221,7 +221,7 @@ Let the robots document your code so you can focus on the fun and creative side 
             <p align="center">
             <img
                 alt="Document the code from a block."
-                src="https://github.com/mage-ai/assets/blob/main/overview/ai-document-block.gif?raw=True"
+                src="https://github.com/mage-ai/assets/blob/main/dev-ux/code-editor/ai-document-block.gif?raw=True"
             />
             </p>
         </Frame>
@@ -234,7 +234,7 @@ Let the robots document your code so you can focus on the fun and creative side 
             <p align="center">
             <img
                 alt="Write comments inline with the code."
-                src="https://github.com/mage-ai/assets/blob/main/overview/ai-code-comments.gif?raw=True"
+                src="https://github.com/mage-ai/assets/blob/main/dev-ux/code-editor/ai-code-comments.gif?raw=True"
             />
             </p>
         </Frame>
@@ -247,7 +247,7 @@ Let the robots document your code so you can focus on the fun and creative side 
             <p align="center">
             <img
                 alt="Document the entire pipeline and each block in it."
-                src="https://github.com/mage-ai/assets/blob/main/overview/ai-document-pipeline.gif?raw=True"
+                src="https://github.com/mage-ai/assets/blob/main/dev-ux/code-editor/ai-document-pipeline.gif?raw=True"
             />
             </p>
         </Frame>
