--- a/docs/developer-ux/code-editor.mdx
+++ b/docs/developer-ux/code-editor.mdx
@@ -196,15 +196,6 @@ Use AI to generate the code for you.
     </p>
 </Frame>
 
-<Frame>
-    <p align="center">
-    <img
-        alt="Use AI to generate the code for you."
-        src="https://github.com/mage-ai/assets/blob/main/guides/ai/generate-block.png?raw=true"
-    />
-    </p>
-</Frame>
-
 [Read more here](/guides/ai/overview#generate-block-using-ai)
 
 ---
@@ -260,9 +251,56 @@ Let the robots document your code so you can focus on the fun and creative side 
 
 ## Customize layout of buttons
 
+The buttons that are used to add new blocks (alongside the search bar) can be personalized.
+
+The buttons in the dropdown menu and the buttons that are visible can be configured using
+[custom design layouts](/platform/designs/setup#add-block-buttons).
+
+The default layout is:
+
+<Frame>
+    <p align="center">
+    <img
+        alt="Add new block default buttons."
+        src="https://github.com/mage-ai/assets/blob/main/dev-ux/code-editor/customize-buttons-default.png?raw=True"
+    />
+    </p>
+</Frame>
+
+<Note>
+    The personalized layout shows `Transformer` and `Global data product` as opposed to
+    `Custom` and `Markdown`; and the dropdown menu is in a different order.
+</Note>
+
+<br />
+
+A personalized layout can look like this:
+
+<Frame>
+    <p align="center">
+    <img
+        alt="Add new block buttons personalized."
+        src="https://github.com/mage-ai/assets/blob/main/dev-ux/code-editor/customize-buttons.png?raw=True"
+    />
+    </p>
+</Frame>
+
 ---
 
 ## Browse dbt models across multiple projects
+
+Dedicated file browser to discover existing models across multiple projects.
+
+<Frame>
+    <p align="center">
+    <img
+        alt="dbt DX 2.0"
+        src="https://github.com/mage-ai/assets/blob/main/dbt/dbt-dx-2.gif?raw=true"
+    />
+    </p>
+</Frame>
+
+[Read more here](/dbt/developer-experience#browse-and-discover-models-across-multiple-projects)
 
 ---
 
@@ -272,21 +310,79 @@ Enhance your code with these quick power-ups:
 
 <AccordionGroup>
     <Accordion title="Replicate the code of an existing block">
+        <Frame>
+            <p align="center">
+            <img
+                alt="Replicate the code of an existing block"
+                src="https://github.com/mage-ai/assets/blob/main/dev-ux/code-editor/replicate-block.gif?raw=True"
+            />
+            </p>
+        </Frame>
+
+        [Read more here](/guides/blocks/replicate-blocks)
     </Accordion>
 
     <Accordion title="Recursively dynamic code made simple">
+        <Frame>
+            <p align="center">
+            <img
+                alt="Recursively dynamic code made simple."
+                src="https://github.com/mage-ai/assets/blob/main/dev-ux/code-editor/dynamic-blocks.png?raw=True"
+            />
+            </p>
+        </Frame>
+
+        A very powerful ultimate spell.
+
+        [Read more here](/design/blocks/dynamic-blocks)
     </Accordion>
 
     <Accordion title="Modify block variables with no-code">
+        <Frame>
+            <p align="center">
+            <img
+                alt="Block interactions preview"
+                src="https://github.com/mage-ai/assets/blob/main/interactions/block-interactions-preview.png?raw=true"
+            />
+            </p>
+        </Frame>
+
+        Configure and run pipelines using no-code UI text fields, dropdown menus, checkboxes, toggle switches, and more.
+
+        [Read more here](/interactions/overview)
     </Accordion>
 
     <Accordion title="Conditionally execute code">
+        <Frame>
+            <p align="center">
+            <img
+                alt="Conditionally execute code"
+                src="https://github.com/mage-ai/assets/blob/main/blocks/conditionals-example.png?raw=true"
+            />
+            </p>
+        </Frame>
+
+        [Read more here](/design/blocks/conditionals)
     </Accordion>
 
     <Accordion title="Callbacks">
+        A callback block is associated to another block. 
+        When the parent block succeeds or fails, the callback block functions are executed.
+
+        [Read more here](/design/blocks/callbacks)
     </Accordion>
 
-    <Accordion title="Testing with Great Expectations">
+    <Accordion title="Test your code with pre-built Great Expectations">
+        <Frame>
+            <p align="center">
+            <img
+                alt="Test your code with pre-built Great Expectations."
+                src="https://github.com/mage-ai/assets/blob/main/notebook/extensions/great-expectation-extension-block.jpeg?raw=true"
+            />
+            </p>
+        </Frame>
+
+        [Read more here](/development/testing/great-expectations)
     </Accordion>
 </AccordionGroup>
 
