--- a/docs/platform/designs/setup.mdx
+++ b/docs/platform/designs/setup.mdx
@@ -17,7 +17,7 @@ icon: "paintbrush-pencil"
 
 <br />
 
-## Setup
+## Header image
 
 1. Enable the feature named `Custom design` in your project settings (e.g. http://localhost:6789/settings/workspace/preferences).
 1. Add a file at the root of your project’s directory (e.g. `main_project/design.yaml`). 
