--- a/docs/developer-ux/overview.mdx
+++ b/docs/developer-ux/overview.mdx
@@ -19,10 +19,11 @@ icon: "superpowers"
 
 1. Personalize
 1. File browser
-1. Editor
+1. Code editor
 1. Dependency tree
 1. Sidekick
 1. Command Center (aka Spellcaster)
-1. Version control application
-1. Arcane Library (aka Files)
-1. Portal Terminal (aka Terminal)
+    1. Version Control mode
+1. Applications
+    1. Arcane Library (aka Files)
+    1. Portal Terminal (aka Terminal)
