[td] Add more docs on apps

--- a/docs/developer-ux/applications/overview.mdx
+++ b/docs/developer-ux/applications/overview.mdx
@@ -72,13 +72,56 @@ Place the application anywhere on the screen by dragging the header and moving i
 
 ## Automatic layout
 
+<Frame>
+    <video
+        controls
+        className="w-full aspect-video"
+        src="https://github.com/mage-ai/assets/raw/main/dev-ux/applications/automatic-layout.mp4"
+    />
+</Frame>
+
+In addition to manually resizing and positioning applications, take advantage of these
+auto-layout features:
+
+1. Drag the header and your mouse pointer to the left edge (approximately vertically centered) and
+    the application will left align to the screen and stretch almost full height and almost 50% width.
+1. Drag the header and your mouse pointer to the right edge instead and it’ll align to the right side of
+    the screen.
+1. Drag the header and your mouse pointer to the top edge (approximately horizontally centered) and
+    the application will align to the top of the screen and stretch almost full width and almost 50% height.
+1. Drag the header and your mouse pointer to the bottom edge (approximately horizontally centered) and
+    the application will align to the bottom of the screen and stretch almost full width and almost 50% height.
+1. Drag the header and your mouse pointer to any of the 4 corners of the screen and the application will align
+    to that corner and stretch fill approximately 50% of the width and height of the screen.
+1. In the top right corner of the application window, there is a green button. Click that button to maximize the
+    application window height and width to fill as much space as possible.
+
+<Note>
+    Applications will always try to leave padding around its edges so that the page behind it can be visible.
+    Therefore, applications won’t fill up 100% of full width or height of the screen.
+</Note>
+
 ---
 
-## Minimize for later usage
+## Minimize application
 
----
+If the application is currently not being used and you need the space on the screen, 
+you can either close the application by clicking the red circle button in the top right corner of the
+window or you can minimize the application by clicking the yellow circle.
 
-## Dock for minimized applications
+<Frame>
+    <video
+        controls
+        className="w-full aspect-video"
+        src="https://github.com/mage-ai/assets/raw/main/dev-ux/applications/minimize.mp4"
+    />
+</Frame>
+
+
+Minimized applications will live in the dock at the bottom of the screen.
+
+Click the minimized window at the bottom of the screen and the application will be restored to
+its original size and position.
 
 ---
 
