[td] Complete docs for arcane library

--- a/docs/developer-ux/applications/overview.mdx
+++ b/docs/developer-ux/applications/overview.mdx
@@ -120,6 +120,15 @@ window or you can minimize the application by clicking the yellow circle.
 
 Minimized applications will live in the dock at the bottom of the screen.
 
+<Frame>
+    <p align="center">
+    <img
+        alt="Applications dock"
+        src="https://github.com/mage-ai/assets/raw/main/dev-ux/applications/dock.png?raw=true"
+    />
+    </p>
+</Frame>
+
 Click the minimized window at the bottom of the screen and the application will be restored to
 its original size and position.
 
