Fix incorrect spelling
`# multiverse_project/settings.ymal` is not correct

--- a/docs/platform/projects/management.mdx
+++ b/docs/platform/projects/management.mdx
@@ -89,7 +89,7 @@ your active projects live.
 Open the `settings.yaml` file and add the following (adjust to your specific setup):
 
 ```yaml
-# multiverse_project/settings.ymal
+# multiverse_project/settings.yaml
 
 projects:
   fire: {}
