[xy] Update kafka type and doc.

--- a/docs/streaming/sources/kafka.mdx
+++ b/docs/streaming/sources/kafka.mdx
@@ -17,9 +17,9 @@ timeout_ms: 500
 auto_offset_reset: latest # Optional
 max_partition_fetch_bytes: 1048576 # Optional
 offset:  # Optional
-- value: None # Optional
-- type: "int"
-- partitions: # Optional
+  value: null # Optional
+  type: "int"
+  partitions: # Optional
   - {"topic": "test", "partition": 1}
 ```
 ### Offset Configuration
