--- a/docs/integrations/databases/MotherDuck.mdx
+++ b/docs/integrations/databases/MotherDuck.mdx
@@ -7,6 +7,10 @@ description: "Execute SQL commands against a MotherDuck database."
 <img src="https://github.com/mage-ai/mage-ai/assets/59450879/0e410c12-73a0-43d8-97fe-396772d2767b" width="60%"/>
 </div>
 
+<Note>
+The MotherDuck intergration is supported in Mage versions `>=0.9.63`
+</Note>
+
 ## Credentials
 
 Open the file named `io_config.yaml` at the root of your Mage project and enter DuckDB database name & schema. 
